<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:padding="5dp"
    android:stretchColumns="1,2,3" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/billTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/bill_total"
            android:textColor="#000"
            tools:ignore="RtlSymmetry,RtlHardcoded" />

        <EditText
            android:id="@+id/billEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:ems="10"
            android:focusable="true"
            android:inputType="numberDecimal"
            android:longClickable="true"
            android:text="@string/_0_00"
            tools:ignore="LabelFor" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" >

        <TextView
            android:id="@+id/tenTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/_10_"
            android:textColor="#000" />

        <TextView
            android:id="@+id/fifteenTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/_15_"
            android:textColor="#000" />

        <TextView
            android:id="@+id/twentyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/_20_"
            android:textColor="#000" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/tip"
            android:textColor="#000"
            tools:ignore="RtlSymmetry,RtlHardcoded" />

        <EditText
            android:id="@+id/tipTenEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/_0_00"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/TipFifteenEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/_0_00"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/tipTwentyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/_0_00"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/total"
            android:textColor="#000"
            tools:ignore="RtlSymmetry,RtlHardcoded" />

        <EditText
            android:id="@+id/totalTenEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/_0_00"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/totalFifteenEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/_0_00"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/totalTwentyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/_0_00"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:text="@string/custom"
            android:textColor="#000"
            tools:ignore="RtlSymmetry,RtlHardcoded" />

        <SeekBar
            android:id="@+id/customSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1"
            android:focusable="false"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:progress="18" />

        <TextView
            android:id="@+id/customTipTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingBottom="5dp"
            android:text="@string/_18_"
            android:textColor="#000"
            tools:ignore="RtlHardcoded" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:paddingRight="5dp"
            android:text="@string/tip"
            android:textColor="#000"
            tools:ignore="RtlSymmetry,RtlHardcoded" />

        <EditText
            android:id="@+id/tipCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/_0_00"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/total"
            android:textColor="#000"
            tools:ignore="RtlSymmetry,RtlHardcoded" />

        <EditText
            android:id="@+id/totalCustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:text="@string/_0_00"
            android:textSize="14sp"
            tools:ignore="LabelFor" />

    </TableRow>

</TableLayout>